<resources>
    <string name="app_name">StudentZoneProject</string>
    <string name="_2_find_the_route_number">2.Find the route number</string>
    <string name="_1_view_stops_on_the_route">1.View Stops on the route</string>
    <string name="go">GO</string>
    <string name="enter_the_route_number">Enter the route number(For eg:- 1A)</string>
    <string name="enter_the_city_name">Enter the city name(For eg:- City1)</string>
    <string name="the_stops_in_the_above_route_are">The Stops in the above route are:-</string>
    <string name="enter_the_destination_stop">Enter the destination stop</string>
    <string name="enter_the_source_stop">Enter the source stop</string>
    <string name="you_should_take_the_route_number">You should take the route number</string>
    <string name="search">Search</string>
    <string name="no_route_exist_between_the_above_stops">No route exist between the above stops</string>
</resources>
