<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ViewStopsActivity">

    <EditText
            android:id="@+id/etCityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/enter_the_city_name"/>

    <EditText
            android:id="@+id/etRouteNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/enter_the_route_number"/>

    <Button android:id="@+id/btnGo"
            android:text="@string/go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tvHeader"
            android:text="@string/the_stops_in_the_above_route_are"
            android:textSize="18sp"
            android:padding="5dp"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rvStops"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>