<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp"
        tools:context=".FindRouteActivity">

    <EditText
            android:id="@+id/etSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/enter_the_source_stop"/>

    <EditText
            android:id="@+id/etDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/enter_the_destination_stop"/>

    <Button
            android:id="@+id/btnSearch"
            android:text="@string/search"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tvRouteNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2A"
            android:padding="5dp"
            android:textStyle="bold"
            android:textSize="25sp"/>
</LinearLayout>